--- a/gemini_python_quickstart.ipynb
+++ b/gemini_python_quickstart.ipynb
@@ -179,7 +179,7 @@
       "outputs": [],
       "source": [
         "import os\n",
-        "os.environ['GOOGLE_API_KEY']='AIzaSyANiMfjdLX_Y-ASf750Tog0bqT1KLXARpU'"
+        "os.environ['GOOGLE_API_KEY']=''"
       ]
     },
     {
@@ -190,7 +190,7 @@
       },
       "outputs": [],
       "source": [
-        "genai.configure(api_key='AIzaSyANiMfjdLX_Y-ASf750Tog0bqT1KLXARpU')"
+        "genai.configure(api_key='')"
       ]
     },
     {
